# lg-geocover-qa-report

./: .gitattributes  .gitignore  LICENSE  MANIFEST.in  Makefile  README.md  conda_build_config.yaml  get_version.py  meta.yaml  pyproject.toml  setup.py  tk_main.py  tk_main.spec  windows-3.11-environment.yaml
.github/workflows/: conda-build.yaml  conda-pyinstaller.yaml  tag_master.yaml  windows-build.yaml  windows-conda.yaml  windows-pyinstaller.yaml
gui/: geocover-qa.spec  main.py
src/geocover_qa/: __init__.py  config.py  helpers.py  stat.py  utils.py
src/geocover_qa/cli/: commands.py
